--- a/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
@@ -2,7 +2,7 @@
 symbol_cleaning_json: parallel_dataset_prep.config/symbol_cleaning.json
 
 # Check the English data for unknown tokens
-check_for_en_unks: false
+check_for_en_unks: true
 
 # Sort the parallel dataset by index of the English sentence in the parallel folio dataset
 sort_by_starting_index: true
