--- a/cai_garland/data/parallel_dataset_prep.config/config.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/config.yaml
@@ -2,12 +2,12 @@ defaults:
   - input: 84000-parallel-sentences
   - output: uncased-no-accents
   - stages:
-    - naive-concats
-    - naive-concats-shuffled
-    - concatted-registers
-    - concatted-registers-shuffled
+    # - naive-concats
+    # - naive-concats-shuffled
+    # - concatted-registers
+    # - concatted-registers-shuffled
     - folio-registers
-    - dictionary
+    # - dictionary
   - processing: local-dask
   - _self_
 
@@ -24,3 +24,5 @@ output_dir: ${oc.env:CAI_TEMP_PATH}/enbo_data
 # These are used by BERT when shuffling
 cuda: true
 batch_size: 16
+
+skip_duplicate_folio_check: false
