--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,5 @@ install_requires =
     tensorboardX>=2.5.1
     tensorboard>=2.9.1
     hydra-core>=1.2.0
+    hydra-colorlog>=1.2.0
+    colorama>=0.4.4
