--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     pyewts>=0.1.3
     torch>=1.11.0
     transformers>=4.19.2
+    datasets>=2.3.2
     matplotlib>=3.5.2
     bokeh>=2.1.1
     sentencepiece>=0.1.96
