Add sacrebleu to requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     torch>=1.11.0
     transformers>=4.19.2
     datasets>=2.3.2
+    sacrebleu>=2.1.0
     matplotlib>=3.5.2
     bokeh>=2.1.1
     sentencepiece>=0.1.96
