Add text of sample eval predictions to tensorboard

--- a/cai_garland/training/train_nmt.config/training_preprocess/basic.yaml
+++ b/cai_garland/training/train_nmt.config/training_preprocess/basic.yaml
@@ -1,3 +1,6 @@
+# Number of random validation text entries to output to Tensorboard
+eval_decodings_in_tensorboard: 10
+
 # The number of processes to use for the preprocessing
 preprocessing_num_workers: ~
 
