Reorganize the olive-cormorant champion checkpoint

--- a/cai_garland/training/train_nmt.config/model/olive-cormorant-bart.yaml
+++ b/cai_garland/training/train_nmt.config/model/olive-cormorant-bart.yaml
@@ -1,5 +1,5 @@
 # Encoder model name, following make_encoder_decoder naming convention
-encoder_model: cai:albert-olive-cormorant
+encoder_model: cai:albert-olive-cormorant/base
 
 # Decoder model name, following make_encoder_decoder naming convention
 decoder_model: hf:facebook/bart-base
