--- a/cai_garland/cli/translate.config/config.yaml
+++ b/cai_garland/cli/translate.config/config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - model: olive-cormorant-bart
+  - model: olive-cormorant-bart-x3
   - generation: medium-cold-beam
   - mode: interactive
   - override hydra/job_logging: colorlog
