--- a/cai_garland/cli/translate.config/generation/medium-beam.yaml
+++ b/cai_garland/cli/translate.config/generation/medium-beam.yaml
@@ -13,9 +13,17 @@ segmentation:
     _target_: cai_garland.utils.segmenters.opening_shad_segmenter
   hard_segmenter_kwargs: {}
 
+  # Soft segmentation is applied before preprocessing. Soft segments do _not_ reset the beam generation state.
+  #
+  #   This is a single function in cai_garland.utils.segmenters
+  #
+  #   The recommended segmenters are: none, opening_shad_segmenter, target_token_count_segmenter
+  soft_segmentation:
+    _target_: cai_garland.utils.segmenters.none
+  soft_segmenter_kwargs: {}
+
 processing:
-  # Preprocessing is applied after hard segmentation (if any). This happens right before feeding the segments to the
-  #   generation algorithm.
+  # Preprocessing is applied after hard segmentation (if any) but before soft segmentation (if any).
   #
   #   This is a (possibly empty) list of function calls in cai_garland.utils.str_processors, formatted like so:
   #     - _target_: cai_garland.utils.str_processors.sample_func_1
