--- a/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -3,8 +3,8 @@ defaults:
 
 seed: 12345
 
-per_device_train_batch_size: 4
-per_device_eval_batch_size: 4
+per_device_train_batch_size: 10
+per_device_eval_batch_size: 24
 
 # Every how many training steps to run the evaluation loop
 logging_steps: 2000
@@ -17,6 +17,10 @@ save_total_limit: 50
 
 # Optimizer learning rate
 learning_rate: 1e-4
+
+# Number of steps of the linear warmup in the LR scheduler
+#   (multiply by number of devices * per_device_train_batch_size to get number of warmup examples)
+warmup_steps: 3000
 
 # Number of beams to use for evaluation. This argument will be passed to 'model.generate', which is used during
 #   'evaluate' and 'predict'
