--- a/cai_garland/training/train_nmt.config/data/84000-parallel-sentences-3-registers.yaml
+++ b/cai_garland/training/train_nmt.config/data/84000-parallel-sentences-3-registers.yaml
@@ -14,3 +14,25 @@ target_lang: en
 #   like mBART where the first generated token needs to be the target language token. Usually it is the target
 #   language token
 forced_bos_token: ~
+
+# Name of the validation split to use in the overall dataset (defaults to "validation" if omitted)
+validation_split_name: test
+
+# Fraction at which to rebalance the validation data to contain entries with registers. Only valid if registers are
+#   used. Will subsample the non-register data before subsampling the overall dataset. So if your test data is, say 20%
+#   registers, your validation dataset size _before subsampling_ will be approximately
+#
+#     (1 + validation_register_rebalance_frac) * 20% 
+#
+# Leave out or set to ~ (None) to skip rebalancing or if not using registers.
+validation_register_rebalance_frac: 1
+
+# Rate at which to subsample the validation data. Performed _after_ the register rebalancing, if any. With rebalancing,
+#   the approximate final size of the evaluation set is given by the following:
+#
+#     (1 + validation_register_rebalance_frac) * (fraction of register data) * validation_sampling_rate
+#
+#   with the register data balance as specified by validation_register_rebalance_frac, if any.
+#
+# Can be none to avoid subsampling.
+validation_sampling_rate: 0.05
