Set BLEU to be the evaluation metric

--- a/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -36,6 +36,9 @@ evaluation_strategy: STEPS
 # Use beam search during the evaluation step, needed for computing BLEU on validation data
 predict_with_generate: true
 
+# What metric to use on evaluation data to decide which model is the current champion
+metric_for_best_model: bleu
+
 # Do not output memory use metrics to Tensorboard. This seems to be buggy in the current version of Transformers
 skip_memory_metrics: true
 
