Refactor batch processing to move into Translator

--- a/cai_garland/cli/translate.config/generation/medium-beam-x3.yaml
+++ b/cai_garland/cli/translate.config/generation/medium-beam-x3.yaml
@@ -6,35 +6,35 @@ segmentation:
   # Hard segmentation is applied before preprocessing. Hard segments reset the beam generation state. Note that file
   #   boundaries always count as hard segments.
   #
-  #   This is a single function in cai_garland.utils.segmenters
+  #   This is a single function class in cai_garland.utils.segmenters
   #
-  #   The recommended segmenters are: none, opening_shad_segmenter, line_break_segmenter, double_shad_segmenter
+  #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterLineBreak, SegmenterDoubleShad
   hard_segmentation:
-    _target_: cai_garland.utils.segmenters.none
+    _target_: cai_garland.utils.segmenters.SegmenterNone
   hard_segmenter_kwargs: {}
 
-  # Soft segmentation is applied after preprocessing. Soft segments do _not_ reset the beam generation state.
+  # Soft segmentation is applied before preprocessing. Soft segments do _not_ reset the beam generation state.
   #
-  #   This is a single function in cai_garland.utils.segmenters
+  #   This is a single function class in cai_garland.utils.segmenters
   #
-  #   The recommended segmenters are: none, opening_shad_segmenter, target_token_count_segmenter
+  #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterTargetTokenCount
   soft_segmentation:
-    _target_: cai_garland.utils.segmenters.target_token_count_segmenter
+    _target_: cai_garland.utils.segmenters.SegmenterTargetTokenCount
   soft_segmenter_kwargs: {}
 
 processing:
   # Preprocessing is applied after hard segmentation (if any) but before soft segmentation (if any).
   #
-  #   This is a (possibly empty) list of function calls in cai_garland.utils.str_processors, formatted like so:
-  #     - _target_: cai_garland.utils.str_processors.sample_func_1
-  #     - _target_: cai_garland.utils.str_processors.sample_func_2
+  #   This is a (possibly empty) list of function classes in cai_garland.utils.str_processors, formatted like so:
+  #     - _target_: cai_garland.utils.str_processors.ProcessorSampleFunc1
+  #     - _target_: cai_garland.utils.str_processors.ProcessorSampleFunc2
   #     - ...
   preprocessing:
-    - _target_: cai_garland.utils.str_processors.remove_newline
-    - _target_: cai_garland.utils.str_processors.remove_consecutive_spaces
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveNewLine
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
 
   # Preprocessing is applied to the decoded text.
   #
-  #   This is a (possibly empty) list of functions in cai_garland.utils.str_processors
+  #   This is a (possibly empty) list of function classes in cai_garland.utils.str_processors
   postprocessing:
-    - _target_: cai_garland.utils.str_processors.remove_consecutive_spaces
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
