Post processing with new processors

--- a/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
@@ -36,3 +36,16 @@ postprocessing:
 
   target_lang:
     - _target_: cai_garland.utils.str_processors.ProcessorLowerCase
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveBracketed
+      _args_: ["{([", "])}"]
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
+      _args_: [")\"'"]
+    - _target_: cai_garland.utils.str_processors.ProcessorReplaceCharacters
+      _args_: ["!", "."]
+    - _target_: cai_garland.utils.str_processors.ProcessorReplaceCharacters
+      _args_: [";", "."]
+    - _target_: cai_garland.utils.str_processors.ProcessorBlankOutAllWithCharacters
+      _args_: ["]{"]
+    - _target_: cai_garland.utils.str_processors.ProcessorBlankOutDanglingBrackets
+      _args_: ["\"'"]
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
