Move symbol cleaning to postprocessing

--- a/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
@@ -1,9 +1,3 @@
-# Symbol cleanup mapping for the source language, relative to parallel_dataset_prep.py
-symbol_cleaning_src_json: parallel_dataset_prep.config/symbol_cleaning_bo.json
-
-# Symbol cleanup mapping for the target language, relative to parallel_dataset_prep.py
-symbol_cleaning_tgt_json: parallel_dataset_prep.config/symbol_cleaning_en.json
-
 # Check the English data for unknown tokens
 check_for_en_unks: true
 
@@ -31,11 +25,17 @@ separator: "[eor]"
 #   - ...
 postprocessing:
   source_lang:
+    # Symbol cleanup mapping for the source language, relative to parallel_dataset_prep.py
+    - _target_: cai_garland.utils.str_processors.ProcessorSymbolCleaningJSON
+      _args_: [parallel_dataset_prep.config/symbol_cleaning_bo.json]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveDanglingShads
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
 
   target_lang:
     - _target_: cai_garland.utils.str_processors.ProcessorLowerCase
+    # Symbol cleanup mapping for the target language, relative to parallel_dataset_prep.py
+    - _target_: cai_garland.utils.str_processors.ProcessorSymbolCleaningJSON
+      _args_: [parallel_dataset_prep.config/symbol_cleaning_en.json]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveBracketed
       _args_: ["{([", "])}"]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
