--- a/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/output/uncased-no-accents.yaml
@@ -40,6 +40,8 @@ postprocessing:
       _args_: ["{([", "])}"]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
       _args_: [")\"'"]
+    - _target_: cai_garland.utils.str_processors.ProcessorRemoveCharacters
+      _args_: ["0-9"]
     - _target_: cai_garland.utils.str_processors.ProcessorReplaceCharacters
       _args_: ["!", "."]
     - _target_: cai_garland.utils.str_processors.ProcessorReplaceCharacters
@@ -47,5 +49,5 @@ postprocessing:
     - _target_: cai_garland.utils.str_processors.ProcessorBlankOutAllWithCharacters
       _args_: ["]{"]
     - _target_: cai_garland.utils.str_processors.ProcessorBlankOutDanglingBrackets
-      _args_: ["\"'"]
+      _args_: ["\""]
     - _target_: cai_garland.utils.str_processors.ProcessorRemoveConsecutiveSpaces
