Option to limit number of concatenated sentences

--- a/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-shuffled.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-shuffled.yaml
@@ -1,7 +1,7 @@
 defaults:
   - shuffle/shuffle@concatted-registers-shuffled
   - registers@concatted-registers-shuffled
-  - concat@concatted-registers-shuffled
+  - concat/concat@concatted-registers-shuffled
 
 concatted-registers-shuffled:
   # Function to pull the dataset
