--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats.yaml
@@ -1,6 +1,6 @@
 defaults:
   - shuffle/no-shuffle@naive-concats
-  - concat@naive-concats
+  - concat/concat@naive-concats
 
 naive-concats:
   # Function to pull the dataset
