Add unconcatenated register stage

--- a/cai_garland/data/parallel_dataset_prep.config/config.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/config.yaml
@@ -6,6 +6,7 @@ defaults:
     - naive-concats-shuffled
     - concatted-registers
     - concatted-registers-shuffled
+    - unconcatted-registers-shuffled
     - folio-registers
     - dictionary
   - processing: local-dask
