--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - data: 84000-parallel-sentences-3-registers
-  - model: olive-cormorant-x3-bart
+  - data: 84000-parallel-sentences-no-registers-valid-from-train
+  - model: olive-cormorant-bart
   - training: basic_with_bleu
   - training_preprocess: basic
   - override hydra/job_logging: colorlog
