--- a/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -6,6 +6,8 @@ seed: 12345
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 24
 
+num_train_epochs: 9
+
 # Every how many training steps to run the evaluation loop
 logging_steps: 2000
 
