--- a/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-shuffled.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-shuffled.yaml
@@ -11,3 +11,6 @@ concatted-registers-shuffled:
   # Function to prepare the dataset
   prep_func:
     _target_: cai_garland.data.parallel_dataset_prep._prep_concatted_register_dataset
+
+  # Do not sort the parallel dataset by index of the English sentence in the parallel folio dataset
+  sort_by_starting_index: false
