--- a/cai_garland/data/parallel_dataset_prep.config/config.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/config.yaml
@@ -2,9 +2,9 @@ defaults:
   - input: 84000-parallel-sentences
   - output: uncased-no-accents
   - stages:
-    - naive-unconcatted
+    # - naive-unconcatted
     # - naive-concats
-    # - naive-concats-shuffled
+    - naive-concats-shuffled
     # - concatted-registers
     # - concatted-registers-shuffled
     # - unconcatted-registers-shuffled
