--- a/cai_garland/data/parallel_dataset_prep.config/stages/shuffle/shuffle.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/shuffle/shuffle.yaml
@@ -1,6 +1,20 @@
 # Shuffle the sentences before concatenating
 shuffle_concats: true
 
+# Hugging Face MNLI model to use for sequencing the sentences
+shuffle_model: typeform/distilbert-base-uncased-mnli
+
+# Sampling temperature for sentence sequencing
+shuffle_temperature: 1
+
+# Score cutoffs to apply prior to sampling (never sample entirely irrelevant sentences)
+shuffle_score_cutoffs:
+  entailment: 1
+  contradiction: 12
+
+# Probability of drawing a contradiction instead of an entailment
+contradiction_probability: 0.1
+
 # Number of times to repeat the shuffle to get a larger dataset
 num_shuffling_repetitions: 1
 
@@ -8,7 +22,4 @@ num_shuffling_repetitions: 1
 num_shuffled_elems_frac: 0.5
 
 # Number of times to try to find the next sentences during shuffling
-shuffle_elem_find_tries: 100
-
-# Score threshold to accept the next sentence
-shuffle_elem_find_threshold: 0.999
+shuffle_elem_find_tries: 128
