Fix shuffling config in no-shuffle stages

--- a/cai_garland/data/parallel_dataset_prep.config/stages/shuffle/no-shuffle.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/shuffle/no-shuffle.yaml
@@ -1,2 +1,3 @@
-# Shuffle the sentences before concatenating
-shuffle_concats: false
+shuffle:
+  # Do not shuffle the sentences before concatenating
+  concats: false
