--- a/cai_garland/training/train_nmt.config/config.yaml
+++ b/cai_garland/training/train_nmt.config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - data: 84000-parallel-sentences-raw
-  - model: olive-cormorant-bart
+  - data: 84000-parallel-sentences-3-registers-only
+  - model: olive-cormorant-x3-bart
   - training: basic_with_bleu
   - training_preprocess: basic
   - override hydra/job_logging: colorlog
@@ -15,6 +15,8 @@ hydra:
 # Uncomment this to skip evaluation
 # training:
 #   evaluation_strategy: "NO"
+
+pretrained_checkpoint: ${oc.env:CAI_TEMP_PATH}/champion
 
 # Overwrite the cached training and evaluation sets
 overwrite_cache: false
