--- a/cai_garland/data/parallel_dataset_prep.config/config.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/config.yaml
@@ -2,11 +2,11 @@ defaults:
   - input: 84000-parallel-sentences
   - output: uncased-no-accents
   - stages:
-    # - naive-unconcatted
+    - naive-unconcatted
     # - naive-concats
     # - naive-concats-shuffled
     # - concatted-registers
-    - concatted-registers-shuffled
+    # - concatted-registers-shuffled
     # - unconcatted-registers-shuffled
     # - folio-registers
     # - dictionary
