--- a/cai_garland/cli/translate.config/generation/medium-beam-long-inputs.yaml
+++ b/cai_garland/cli/translate.config/generation/medium-beam-long-inputs.yaml
@@ -24,7 +24,7 @@ segmentation:
   #   The recommended segmenters are: SegmenterNone, SegmenterOpeningShad, SegmenterTargetTokenCount
   soft_segmentation:
     _target_: cai_garland.utils.segmenters.SegmenterTargetTokenCount
-  soft_segmenter_kwargs: {"max_length": 64}
+  soft_segmenter_kwargs: {}
 
 processing:
   # Preprocessing is applied after hard segmentation (if any) but before soft segmentation (if any).
