--- a/cai_garland/cli/translate.config/config.yaml
+++ b/cai_garland/cli/translate.config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - model: olive-cormorant-bart-x3
-  - generation: medium-beam-long-inputs-retrospective
+  - generation: medium-beam-x3
   - mode: interactive
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
