Prepare settings for refit with shorter concats

--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-shuffled.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-shuffled.yaml
@@ -13,3 +13,6 @@ naive-concats-shuffled:
 
   # Do not sort the parallel dataset by index of the English sentence in the parallel folio dataset
   sort_by_starting_index: false
+
+  # Number of shuffled examples to get from the flat data
+  frac_shuffled: 1
